# interactive-modeling-and-forecasting-service

./: .gitignore  Dockerfile  README.md
app/: .env.example  config.py  logs.py  main.py  pyproject.toml
app/src/api/: __init__.py  logs.py
app/src/api/di/: __init__.py  core_provider.py  infra_provider.py  logs.py  logs_provider.py
app/src/api/v1/: __init__.py
app/src/api/v2/: __init__.py
app/src/core/application/: __init__.py
app/src/core/domain/: __init__.py
app/src/infrastructure/: __init__.py  logs.py
app/src/infrastructure/adapters/: __init__.py
app/src/shared/: empty_ts.py  full_predict.py  future_dates.py  get_residuals.py  schemas.py  to_panel.py  utils.py
app/src/shared/hegy/: __init__.py  hegy.py
app/tests/: conftest.py
app/tests/common/: nhits.py  params_permutations.py
app/tests/data/: balance.csv  ipc_eu.csv
app/tests/data/fit_results/: fit_request.json  fit_results.json
app/tests/data/month/: brent_price.csv  forecasts_lstm_base.json  forecasts_lstm_exog.json  ipc_eu.csv  ipc_russia.csv
app/tests/data/quarter/: ca.csv  labour.csv
app/tests/data/year/: u_men.csv  u_total.csv  u_women.csv
app/tests/test_api/: utils.py
app/tests/test_api/test_building_model/: graphs.py  test_gru.py  test_lstm.py  test_nhits.py  validators.py
app/tests/test_api/test_gen_series/: test_naive_decomp.py  test_stl.py
app/tests/test_api/test_prelimiary_diagnosis/: test_df_gls.py  test_dickey_fuller.py  test_fao.py  test_kim_andrews.py  test_kpss.py  test_perron.py  test_pp_plot.py  test_qq_plot.py  test_range.py  test_zivot_andrews.py
(+472 files in other folders)
