[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=7.2.0",
    "dishka>=1.6.0",
    "fastapi[standard]>=0.115.12",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "statsmodels>=0.14.4",
]
